[project]
name = "research-template"
version = "0.1.0"
description = "Add a short description here"
authors = [{ name = "jamieplace", email = "email@gmail.com" }]
dependencies = [
    "numpy>=1.24.4",
    "matplotlib>=3.7.2",
    "tqdm>=4.65.0",
    "polars>=0.18.9",
    "python-language-server>=0.36.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu121"
type = "index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.4.1",
    "jupyter>=1.0.0",
    "ruff~=0.0.291",
    "pytest>=7.4.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 79

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
select = [
	"F", # pyflakes
	"E", # pycodestyle
	"W", # pycodestyle warnings
	"I", # isort
]
ignore = []
line-length = 79
